--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Dua code len github that de xem co thay doi khong</h1>
+    <h4>Minh phai reload lai cac noi moi duoc</h4>
 </body>
 </html>
